syntax = "proto3";

package protobuf;
option go_package = "./protobuf";
import "proto/Message.proto";

option java_multiple_files = true;
option java_package = "com.joxrays.godroidsvr.resolver";
option java_outer_classname = "FsResolverEntry";

service FsResolver {
  rpc GetBaseFileTree(StringTuple) returns (String) {}
  rpc UploadGeneralFile(stream ParamBytes) returns (Status) {}
  rpc DownloadGeneralFile(String) returns (stream Bytes) {}
  rpc ListDir(StringPair) returns (FileInfoList) {}
  rpc DeleteFile(String) returns (Status) {}
  rpc CreateFile(String) returns (Status) {}
  rpc MkDir(String) returns (Status) {}
  rpc RmDir(String) returns (Status) {}
  rpc Move(StringPair) returns (Status) {}
  rpc Rename(StringPair) returns (Status) {}
  rpc Copy(StringPair) returns (Status) {}
  rpc ReadText(String) returns (Status) {}
  rpc WriteText(StringPair) returns (Status) {}
  rpc AppendText(StringPair) returns (Status) {}
}